# hawk

./: .gitignore  .prettierrc  Cargo.toml  README.md  go.mod  index.html  main.go  store.go
about/: index.html
hawk-web/: .babelrc  package-lock.json  package.json  webpack.config.js
hawk-web/src/: index.html  index.tsx  main.css
hawk-web/src/components/layouts/: Nav.css  Nav.tsx
hawk-web/src/components/styles/: forms.css  thin.css
hawk-web/src/routes/: about.tsx  export.tsx  log.tsx  search.tsx  settings.tsx  view.tsx
hawk-web/src/routes/log/: Nav.tsx  log.tsx
hawk-web/src/routes/metrics/: Nav.tsx  edit.tsx  metrics.tsx  new.tsx
hawk-web/src/routes/view/: Nav.tsx  compare.tsx  view.tsx
hawk-web/src/styles/: thin.css
src/: app.js  main.rs  models.rs  package-lock.json  package.json  routes.rs
src/views/: layout.hbs
static/: build.ts  package.json  tsconfig.json  tslint.json
static/src/: index.css  metrics.ts
static/src/scripts/: index.ts  metrics-edit.ts  metrics.ts  util.ts  view.ts
static/src/styles/: index.css  metrics.css  view.css
static/styles/: index.css
templates/: index.hbs  nav.hbs
views/: index.html  layout.html
views/errors/: 404.html
views/export/: index.html
views/layouts/: nav.html
views/logs/: index.html
views/metrics/: edit.html  index.html
views/view/: index.html
