[package]
name = "hawk"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/hawl"
repository = "https://github.com/EthanJustice/hawk"
license = "MIT"
publish = false

[dependencies]
rocket = "~0.4.5"
rocket_contrib = "~0.4.5"