[package]
name = "hawk"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/hawl"
repository = "https://github.com/EthanJustice/hawk"
license = "MIT"
publish = false

[dependencies]
actix-web = "~3.3.2"

pretty_env_logger = "~0.4.0"
